intro, variables, strings, numbers
- Finished core concepts in JavaScript: variables, strings, numbers
- Added examples and notes in /basic folder
- First stage of JS fundamentals completed before moving to control structures

--- a/frontend/javascript/basic/01-introduction/index.html
+++ b/frontend/javascript/basic/01-introduction/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="contenido">
-        <h1>JavaScript Moderno</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
-        <p>Introducción</p>
-        <p class="hashtag">#JSModernoConJuan</p>
+        <h1>Practice JavaScript</h1>
+        <p>Introduction</p>
+        <p class="hashtag">#PracticeJavaScript</p>
     </div>
+    <!-- código de JavaScript -->
+   <script src="js/app.js"></script>
 </body>
 </html>
