--- a/frontend/javascript/basic/03-strings/index.html
+++ b/frontend/javascript/basic/03-strings/index.html
@@ -10,18 +10,17 @@
 <body>
 
     <div class="contenido">
-        <h1>JavaScript Moderno</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
-        <p>Strings o Cadenas de Texto</p>
-        <p class="hashtag">#JSModernoConJuan</p>
+        <h1>Practice JavaScript</h1>
+        <p>Strings</p>
+        <p class="hashtag">#PracticeJS</p>
     </div>
 
-    <script src="js/01-app.js"></script>
-    <script src="js/02-app.js"></script>
-    <script src="js/03-app.js"></script>
-    <script src="js/04-app.js"></script>
-    <script src="js/05-app.js"></script>
-    <script src="js/06-app.js"></script>
+    <!-- <script src="js/01-app.js"></script> -->
+    <!-- <script src="js/02-app.js"></script> -->
+    <!-- <script src="js/03-app.js"></script> -->
+    <!-- <script src="js/04-app.js"></script> -->
+    <!-- <script src="js/05-app.js"></script> -->
+    <!-- <script src="js/06-app.js"></script> -->
     <script src="js/07-app.js"></script>
     
 </body>
