--- a/frontend/javascript/basic/04-numbers/index.html
+++ b/frontend/javascript/basic/04-numbers/index.html
@@ -9,18 +9,17 @@
 </head>
 <body>
 
-    <div class="contenido">
-        <h1>JavaScript Moderno</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
-        <p>Números</p>
-        <p class="hashtag">#JSModernoConJuan</p>
+     <div class="contenido">
+        <h1>Practice JavaScript</h1>
+        <p>Numbers</p>
+        <p class="hashtag">#PracticeJS</p>
     </div>
 
-    <script src="js/01-app.js"></script> 
-    <script src="js/02-app.js"></script>
-    <script src="js/03-app.js"></script>
-    <script src="js/04-app.js"></script>
-    <script src="js/05-app.js"></script> 
+    <!-- <script src="js/01-app.js"></script>  -->
+    <!-- <script src="js/02-app.js"></script> -->
+    <!-- <script src="js/03-app.js"></script> -->
+    <!-- <script src="js/04-app.js"></script> -->
+    <!-- <script src="js/05-app.js"></script>  -->
     <script src="js/06-app.js"></script>
     
 </body>
