--- a/frontend/javascript/basic/05-operators/index.html
+++ b/frontend/javascript/basic/05-operators/index.html
@@ -10,14 +10,13 @@
 <body>
 
     <div class="contenido">
-        <h1>JavaScript Moderno</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
-        <p>Operadores</p>
-        <p class="hashtag">#JSModernoConJuan</p>
+        <h1>Practice JavaScript</h1>
+        <p>Operators</p>
+        <p class="hashtag">#PracticeJS</p>
     </div>
 
-    <script src="js/01-app.js"></script> 
-    <script src="js/02-app.js"></script>
+    <!-- <script src="js/01-app.js"></script>  -->
+    <!-- <script src="js/02-app.js"></script> -->
     <script src="js/03-app.js"></script>
     
 </body>
