--- a/frontend/javascript/basic/07-objects/index.html
+++ b/frontend/javascript/basic/07-objects/index.html
@@ -10,14 +10,13 @@
 <body>
 
     <div class="contenido">
-        <h1>JavaScript Moderno</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
-        <p>Objetos</p>
-        <p class="hashtag">#JSModernoConJuan</p>
+        <h1>Practice JavaScript</h1>
+        <p>Objects</p>
+        <p class="hashtag">#PracticeJS</p>
     </div>
 
-    <!-- <script src="js/01-app.js"></script>  -->
-    <!-- <script src="js/02-app.js"></script> -->
+    <!-- <script src="js/01-app.js"></script>   -->
+    <script src="js/02-app.js"></script> 
     <!-- <script src="js/03-app.js"></script> -->
     <!-- <script src="js/04-app.js"></script> -->
     <!-- <script src="js/05-app.js"></script>  -->
@@ -25,7 +24,7 @@
     <!-- <script src="js/07-app.js"></script> -->
     <!-- <script src="js/08-app.js"></script> -->
     <!-- <script src="js/09-app.js"></script> -->
-    <!-- <script src="js/10-app.js"></script> -->
+    <!-- <script src="js/10-app.js"></script>
     <script src="js/11-app.js"></script>
     <script src="js/12-app.js"></script>
     <script src="js/13-app.js"></script>
