--- a/frontend/javascript/basic/08-arrays/index.html
+++ b/frontend/javascript/basic/08-arrays/index.html
@@ -10,10 +10,9 @@
 <body>
 
     <div class="contenido">
-        <h1>JavaScript Moderno</h1>
-        <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
+        <h1>Practice JavaScript</h1>
         <p>Arrays</p>
-        <p class="hashtag">#JSModernoConJuan</p>
+        <p class="hashtag">#PracticeJS</p>
     </div>
 
     <script src="js/01-app.js"></script> 
