✅ [TS-Basics] Completed basic types section: primitives, any, arrays, tuples, enums, objects, and void. Finalized foundational concepts in TypeScript.

--- a/frontend/typescript/basics/index.html
+++ b/frontend/typescript/basics/index.html
@@ -6,11 +6,16 @@
   <title>Bases de Typescript</title>
 </head>
 <body>
-  <!-- <script src="app.js"></script> -->
+  <script src="app.js"></script>
   <!-- <script src="types/booleans.js"></script> -->
   <!-- <script src="types/numbers.js"></script> -->
   <!-- <script src="types/strings.js"></script> -->
   <!-- <script src="types/any.js"></script> -->
-  <script src="arrays/arrays.js"></script>
+  <!-- <script src="types/arrays.js"></script> -->
+  <!-- <script src="types/tuples.js"></script> -->
+  <!-- <script src="types/enums.js"></script> -->
+  <!-- <script src="types/void.js"></script> -->
+  <!-- <script src="types/never.js"></script> -->
+  <!-- <script src="types/null.js"></script> -->
 </body>
 </html>
