✅ [TS-Functions] Completed section on functions and objects: basic functions, required/optional/default parameters, REST parameters, and function types. Finished practical exercise #2.

--- a/frontend/typescript/basics/index.html
+++ b/frontend/typescript/basics/index.html
@@ -6,7 +6,7 @@
   <title>Bases de Typescript</title>
 </head>
 <body>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
   <!-- <script src="types/booleans.js"></script> -->
   <!-- <script src="types/numbers.js"></script> -->
   <!-- <script src="types/strings.js"></script> -->
@@ -17,5 +17,11 @@
   <!-- <script src="types/void.js"></script> -->
   <!-- <script src="types/never.js"></script> -->
   <!-- <script src="types/null.js"></script> -->
+  <!-- <script src="functions/args-required.js"></script> -->
+  <!-- <script src="functions/args-optinal.js"></script> -->
+  <!-- <script src="functions/args-default.js"></script> -->
+  <!-- <script src="functions/args-rest.js"></script> -->
+  <script src="functions/function-type.js"></script>
+  <!-- <script src="interface/basics.js"></script> -->
 </body>
 </html>
