✅ [TS-CustomTypes] Completed section on objects and custom types: object definitions, inline type issues, methods, custom types, and union types. Finished practical exercise #3.

--- a/frontend/typescript/basics/index.html
+++ b/frontend/typescript/basics/index.html
@@ -21,7 +21,10 @@
   <!-- <script src="functions/args-optinal.js"></script> -->
   <!-- <script src="functions/args-default.js"></script> -->
   <!-- <script src="functions/args-rest.js"></script> -->
-  <script src="functions/function-type.js"></script>
+  <!-- <script src="functions/function-type.js"></script> -->
+  <!-- <script src="objects/objects.js"></script> -->
+  <!-- <script src="objects/type.js"></script> -->
+  <script src="objects/union.types.js"></script>
   <!-- <script src="interface/basics.js"></script> -->
 </body>
 </html>
