✅ [TS-Debug-ES6-Classes] Completed sections 6–8: debugging and tsconfig setup, ES6 features (let, destructuring, for-of, classes), and full TypeScript class system (inheritance, getters/setters, abstract and private constructors).

--- a/frontend/typescript/basics/index.html
+++ b/frontend/typescript/basics/index.html
@@ -24,7 +24,7 @@
   <!-- <script src="functions/function-type.js"></script> -->
   <!-- <script src="objects/objects.js"></script> -->
   <!-- <script src="objects/type.js"></script> -->
-  <script src="objects/union.types.js"></script>
   <!-- <script src="interface/basics.js"></script> -->
+  <script src="main.js"></script>
 </body>
 </html>
